therapist list & ongoing therapy list added
